# hacl-star

./: .drone.yml  .fstar_version  .gitattributes  .gitignore  .gitmodules  .kremlin_version  .travis.yaml  .travis.yml  Backlog.fst  CHANGES.md  CMakeLists.txt  CODE-OF-CONDUCT.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONVENTIONS.md  Dockerfile  GOVERNANCE.md  Hacl.fst.config.json  INSTALL.md  MAINTAINERS.md  MERGE.md  MERGING-DEV.md  Makefile  Makefile.OCaml  Makefile.build  Makefile.common  Makefile.include  Makefile.local  Makefile.openssl  Makefile.prepare  Makefile.snapshot  PULL.md  PULL_REQUEST.md  README.EverCrypt.md  README.HACL.md  README.Vale.md  README.md  ROADMAP.md  SECURITY.md  TOOLCHAIN.md  (+10 more)
bindings/ocaml/: .gitignore  .merlin  AutoConfig2.ml  Bignum.ml  CHANGES.md  EverCrypt.ml  EverCrypt.mli  Hacl.ml  Hacl.mli  Makefile  Shared.ml  Shared.mli  SharedDefs.ml  SharedDefs.mli  SharedFunctors.ml  Utils.ml  aead_test.ml  dune  dune-project  evercrypt.opam  hacl-star.opam  index.mld
bindings/ocaml/tests/: aead_test.ml  bignum_test.ml  blake2_test.ml  config_test.ml  curve25519_test.ml  drbg_test.ml  dune  ecdsa_test.ml  ed25519_speccheck.ml  ed25519_test.ml  hash_test.ml  hkdf_test.ml  hmac_test.ml  k256_test.ml  libsecp256k1_test.ml  nacl_test.ml  p256_test.ml  poly1305_test.ml  test_utils.ml
code/experimental/he/hestarhs/: .gitignore  .stylish-haskell.yaml  README.md  hestarhs.cabal  shell.nix  stack.yaml
code/experimental/he/hestarhs/exec/: Main.hs
code/experimental/he/hestarhs/src/: Argmax.hs  Comparison.hs  Experimental.hs  Hacl.hs  Lib.hs  PermuteFold.hs  Playground.hs  TestHacl.hs  Utils.hs
code/experimental/he/hestarhs/src/Hacl/: Bignum.hs  Packing.hs  Pahe.hs  PaheImpl.hs  Raw.hs  Support.hs
code/experimental/he/hestarhs/src/Lib/: Field.hs  Misc.hs
extracted/c/: CMakeLists.txt  Chacha20.c  Chacha20.h  Curve25519.c  Curve25519.h  HSalsa20.h  Makefile  NaCl.c  NaCl.h  Poly1305.c  Poly1305.h  Poly1305_64.c  Poly1305_64.h  README  Salsa20.c  Salsa20.h  X25519.c  X25519.h  XSalsa20.c  XSalsa20.h  kremlib.c  kremlib.h  test-chacha.c  test-curve.c  test-nacl.c  test-salsa.c  test.c  testlib.h
snapshots/hacl-c/: AEAD_Poly1305_64.c  AEAD_Poly1305_64.h  CMakeLists.txt  Chacha20.backup.c  Chacha20.c  Chacha20.h  Chacha20Poly1305.c  Chacha20Poly1305.h  Chacha20_Vec128.c  Chacha20_Vec128.h  Chacha20_state.h  Chacha20_vec.c  Chacha20_vec.h  Chacha20_vec_naive.c  Curve25519.c  Curve25519.h  Curve25519_32_custom.c  Ed25519.c  Ed25519.h  FStar.h  FStar_UInt128.c  FStar_UInt128.h  HACL.h  HMAC_SHA2_256.c  HMAC_SHA2_256.h  HSalsa20.c  HSalsa20.h  Hacl_Chacha20.c  Hacl_Chacha20.h  Hacl_Chacha20Poly1305.c  Hacl_Chacha20Poly1305.h  Hacl_Chacha20_Vec128.c  Hacl_Chacha20_Vec128.h  Hacl_Curve25519.c  Hacl_Curve25519.h  Hacl_Ed25519.c  Hacl_Ed25519.h  Hacl_HMAC_SHA2_256.c  Hacl_HMAC_SHA2_256.h  Hacl_HMAC_SHA2_384.c  (+88 more)
snapshots/hacl-c/kremlin/: c_endianness.h  fstar_ints.h  fstar_uint128.h
snapshots/hacl-c/kremlin/internal/: compat.h  target.h  types.h
snapshots/tezos/: AEAD_Poly1305_64.c  CMakeLists.txt  FStar_UInt128.c  HACL.h  Hacl_Curve25519.c  Hacl_Ed25519.c  Hacl_HMAC_SHA2_384.c  Hacl_HMAC_SHA2_512.c  Hacl_Poly1305_32.c  Hacl_SHA2_256.c  Hacl_SHA2_384.c  Hacl_SHA2_512.c  Hacl_Unverified_Random.c  NaCl.c  haclnacl.c  haclnacl.h  kremlib.c  kremstr.c  testlib.c
snapshots/tezos/include/: FStar_UInt128.h  Hacl_Chacha20Poly1305.h  Hacl_Curve25519.h  Hacl_HMAC_SHA2_256.h  Hacl_HMAC_SHA2_384.h  Hacl_HMAC_SHA2_512.h  Hacl_Policies.h  Hacl_Poly1305_32.h  Hacl_Poly1305_64.h  Hacl_SHA2_256.h  Hacl_SHA2_384.h  Hacl_SHA2_512.h  Hacl_Unverified_Random.h
snapshots/tezos/kremlin/: c_endianness.h  fstar_char.h  prims_string.h
tests/benchmark/: CMakeLists.txt  Makefile  bench_aead.cpp  bench_aead.h  bench_all.sh  bench_cipher.cpp  bench_cipher.h  bench_curve25519.cpp  bench_curve25519.h  bench_ed25519.cpp  bench_ed25519.h  bench_hash.cpp  bench_hash.h  bench_mac.cpp  bench_mac.h  bench_merkle.cpp  bench_merkle.h  benchmark-all.sh  benchmark.cpp  benchmark.h  benchmark_plot_templates.h  compile_all.sh  env.sh  hash_template.plt  metaplots.plt  my_bcrypt.c  my_openssl.c  my_openssl.h  runbenchmark.cpp
tests/benchmark/libcurve25519/: CMakeLists.txt  README.md  curve25519-amd64-asm.S  curve25519-amd64.c  curve25519-donna64.c  curve25519-evercrypt64.c  curve25519-fiat64.c  curve25519-hacl51.c  curve25519-openssl.c  curve25519-precomp.c  curve25519-vale-inline.h  libcurve25519.h  libcurve25519_inline.h  test_vectors.h
tests/benchmark/libevercrypt/: CMakeLists.txt
tests/benchmark/libfiat-curve25519/: CMakeLists.txt  README.md  femul.c  femul.h  fesquare.c  fesquare.h  fiat-curve25519.h  freeze.c  freeze.h  ladderstep.c  ladderstep.h  scalarmult.c
tests/benchmark/libfiat-curve25519/liblow/: cmovznz.c  liblow.h
tests/benchmark/libjc/: CMakeLists.txt  README.md  jc.h
tests/benchmark/libjc/src/: Makefile
tests/benchmark/libjc/src/crypto_core/keccakf160064bits/avx2/: keccak_f1600.jahh  keccak_f1600.jazz  keccak_f1600_export.jazz  keccak_f1600_export.s
tests/benchmark/libjc/src/crypto_core/keccakf160064bits/avx2_openssl/: keccak_f1600.jazz  keccak_f1600_export.jazz  keccak_f1600_export.s
tests/benchmark/libjc/src/crypto_core/keccakf160064bits/ref/: Makefile  keccak_f1600.jazz  keccak_f1600_export.jazz  keccak_f1600_export.s
tests/benchmark/libjc/src/crypto_core/keccakf160064bits/scalar/: keccak_f1600.jahh  keccak_f1600.jazz  keccak_f1600_export.jazz  keccak_f1600_export.s
tests/benchmark/libjc/src/crypto_core/keccakf160064bits/scalar_g/: keccak_f1600.jahh  keccak_f1600.jazz  keccak_f1600_export.jazz  keccak_f1600_export.s
tests/benchmark/libjc/src/crypto_hash/keccak1600/avx2/: keccak_1600.japp  keccak_1600.jazz
tests/benchmark/libjc/src/crypto_hash/sha3224/avx2/: Makefile  (+3 more)
tests/benchmark/libjc/src/crypto_onetimeauth/poly1305/: Makefile  Makefile.common
tests/benchmark/libkremlib/: CMakeLists.txt
tests/benchmark/librfc7748/: CMakeLists.txt
tools/: Makefile.opam  Makefile.opam-release  blast-staticconfig.sh  findpython3.sh  get_vale.sh  sloccount.sh  valedepend.py
(+12751 files in other folders)
