(library
 (name        hacl_star)
 (public_name hacl-star)
 (libraries hacl-star-raw
            zarith)
 (preprocessor_deps config.h)
 (preprocess (action (run %{bin:cppo} %{input-file})))
 (flags (:standard -warn-error -3)))

(documentation
 (package hacl-star)
  (mld_files index))

(rule (targets config.h) (deps)
 (action
  (bash "cp $(ocamlfind query hacl-star-raw)/config.h .")))
