opam-version: "2.0"
name: "hacl-star"
version: "0.1"
maintainer: "Victor Dumitrescu <victor.dumitrescu@nomadic-labs.com>"
authors: [ "Victor Dumitrescu <victor.dumitrescu@nomadic-labs.com>" ]
homepage: "https://hacl-star.github.io/"
bug-reports: "https://github.com/project-everest/hacl-star/issues"
dev-repo: "git+https://github.com/project-everest/hacl-star.git"
license: "Apache-2.0"
synopsis: "OCaml API for EverCrypt/HACL*"
depends: [
  "ocaml" { >= "4.05.0" }
  "hacl-star-raw"
  # "bigstring"
  "zarith"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest"]
]
