(tests
 (names config_test
        aead_test
        curve25519_test
        ed25519_test
        ed25519_speccheck
        hash_test
        poly1305_test
        hmac_test
        hkdf_test
        nacl_test
        drbg_test
        p256_test
        k256_test
        libsecp256k1_test)
 (libraries hacl-star alcotest secp256k1-internal qcheck-core cstruct)
 (preprocessor_deps config.h)
 (preprocess (action (run %{bin:cppo} %{input-file})))
 (flags (:standard -open Hacl_star -warn-error -3)))

(rule (targets config.h) (deps)
 (action
  (bash "cp $(ocamlfind query hacl-star-raw)/config.h .")))
